public/style.css
:root {
    --player0-color-zone: #e93423;
    --player0-color-background: #d55049;
    --player0-color-outline: #802f2e;
    --player0-background-gradient: linear-gradient(0, #973935 0%, #ec655f 100%);
    
    --player1-color-zone: #557c47;
    --player1-color-background: #add773;
    --player1-color-outline: #628146;
    --player1-background-gradient: linear-gradient(0, #76934e 0%, #dbfd92 100%);

    --overlay-background: rgba(0, 0, 0, 0.5);
    --hint-background: rgba(255, 255, 255, 0.7);
    --emphasis-background: rgba(255, 255, 255, 0.1);

    --cancel-color-text: #391513;
    --cancel-color-background: linear-gradient(0, #8e3531 0%, #dd544d 100%);
    --cancel-color-outline: #391513;

    --confirm-color-text: #5b7532;
    --confirm-color-background: linear-gradient(0, #7a9d43 0%, #cbfd6f 100%);
    --confirm-color-outline: #5b7532;

    --disabled-color-text: #5b5b5b;
    --disabled-color-background: linear-gradient(0, #777777 0%, #c5c5c5 100%);
    --disabled-color-outline: #5b5b5b;

    --error-color-text: #802f2e;

    --card-color-background: linear-gradient(0, #f0d9ad 0%, #fffef9 100%);
    --card-color-outline: #605447;
    --card-color-text: #605447;

    --button-color-text: #6e6d69;
    --button-color-background: linear-gradient(0, #918f8a 0%, #e6e2da 100%);
    --button-color-outline: #6e6d69;

    /* --button-color-text: #333333;
    --button-color-background: linear-gradient(0, #54616c 0%, #9eb1b9 100%);
    --button-color-outline: #333333; */

    --content-color-background: radial-gradient(circle, #78aee7 0%, #2a6281 100%);
    --content-color-outline: #5882b0;

    --material-icons-color: black;
    --input-background: white;
    --input-outline-color: #353535;
    
    --text-stroke-font-color: white;
    --text-stroke-color: #2c2c2c;

    --font-color: black;

    --register-form-background: rgba(16, 36, 49, 0.315);
    --warning-color: red;

    --backdrop-background: radial-gradient(circle, #516683 0%, #1d3458 100%);
}

* {
    font-family: "Cairo", sans-serif;
    color: inherit;
    box-sizing: border-box;
    user-select: none;
}

body {
    min-width: 600px;
    min-height: 300px;
    height: 100vh;
    padding: 0;
    margin: 0;
    overflow: hidden;
    display: flex;
    align-items: center;
    justify-content: center;
    background: black;
}

svg#play_area {
    height: 100vh;
    width: auto;
}

text {
    fill: #fff;
    font-weight: 800;
    stroke-width: 5;
    stroke: #000;
    paint-order: stroke;
    text-anchor: middle;
    font-size: 24px;
}

g#areas path {
    stroke-width: 2px;
    stroke: #000;
}

g#sea-routes path {
    stroke-width: 3px;
    stroke: #000;
    fill: none;
}

g#areas, g#text-backgrounds, g#texts {
    cursor: pointer;
}

g#text-backgrounds ellipse {
    stroke-width: 3px;
    stroke: #000;
}

g#continents path {
    stroke-width: 7;
    stroke: #000;
}

button {
    font-weight: bold;
    height: 48px;
    border: 3px solid var(--button-color-outline);
    border-radius: 24px;
    color: var(--button-color-text);
    background: var(--button-color-background);
    box-shadow: 0px 3px 3px rgb(0, 0, 0, 0.4);
    padding: 0 32px;
    transition: 0.3s filter;
    cursor: pointer;
    display: flex;
    justify-content: center;
    align-items: center;
}
button:hover {
    filter: brightness(1.1);
}
button:active {
    margin: 2px -2px -2px 2px;
    box-shadow: 0px 0px;
    filter: brightness(0.9);
}
button.confirm {
    color: var(--confirm-color-text);
    border-color: var(--confirm-color-outline);
    background: var(--confirm-color-background);
}
button.cancel {
    color: var(--cancel-color-text);
    border-color: var(--cancel-color-outline);
    background: var(--cancel-color-background);
}
button:disabled {
    pointer-events: none;
    cursor: not-allowed;
    color: var(--disabled-color-text);
    border-color: var(--disabled-color-outline);
    background: var(--disabled-color-background);
}
button:disabled text {
    stroke: var(--disabled-color-text);
}

button.icon-button {
    width: 64px;
    height: 64px;
    border-radius: 32px;
    padding: 0;
}

button.troop-button {
    width: 96px;
    height: 96px;
    border-radius: 48px;
}

button.small {
    width: 48px;
    height: 48px;
    border-radius: 24px;
    border-width: 2px;
}

/* Flexbox related */
.row, .col {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 10px;
    padding: 20px;
}
.col { flex-direction: column; }
.spacer-0 { width: 0; height: 0; }
.spacer-1 { width: 5px; height: 5px; }
.spacer-2 { width: 10px; height: 10px; }
.spacer-grow { flex-grow: 1; }

.error {
    color: var(--error-color-text);
}

.hidden {
    visibility: hidden;
}

#info-panel {
    position: absolute;
    bottom: 0px;
    left: 50%;
    transform: translateX(-50%);
    background: var(--overlay-background);
    width: 640px;
    height: 240px;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    padding-left: 64px;
    padding-right: 64px;

    border-top-right-radius: 64px;
    border-top-left-radius: 64px;
}

#info-panel-display {
    position: relative;
}

.text-display {
    width: 64px;
    height: 64px;
    border-radius: 32px;
    border: solid 3px #000;
    font-size: 32px;
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
}

.text-display svg {
    width: 100%;
    height: 100%;
}

.text-display text {
    text-anchor: middle;
    stroke-width: 5px;
}

.text-display.big {
    width: 256px;
    height: 256px;
    border-radius: 128px;
    border-width: 10px;
    font-size: 128px;
}

.text-display.medium {
    width: 128px;
    height: 128px;
    border-radius: 64px;
    border-width: 7px;
    font-size: 64px;
}

.no-backdrop {
    background: transparent;
    border: none;
}

.no-backdrop text {
    stroke: #000;
}

#notification-overlay > div {
    width: 100%;
    height: 100%;
    position: absolute;
}
/* ... */

